# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.911 2012/01/01 17:56:53 armin76 Exp $

  01 Jan 2012; Raúl Porcel <armin76@gentoo.org>
  gentoo-sources-2.6.38-r7.ebuild:
  alpha/arm/ia64/sh/sparc/x86 stable wrt #394929

  30 Dec 2011; Markos Chandras <hwoarang@gentoo.org>
  gentoo-sources-3.1.6.ebuild:
  Stable on amd64 wrt bug #396469

  30 Dec 2011; Michael Pagano <mpagano@gentoo.org>
  -gentoo-sources-3.0.7.ebuild, -gentoo-sources-3.0.9.ebuild,
  -gentoo-sources-3.0.11.ebuild:
  Old version cleanup

*gentoo-sources-3.1.6 (28 Dec 2011)
*gentoo-sources-3.0.14 (28 Dec 2011)
*gentoo-sources-2.6.32-r40 (28 Dec 2011)

  28 Dec 2011; Stratos Psomadakis <psomas@gentoo.org>
  +gentoo-sources-2.6.32-r40.ebuild, +gentoo-sources-3.0.14.ebuild,
  +gentoo-sources-3.1.6.ebuild:
  Version bumps

  23 Dec 2011; Agostino Sarubbo <ago@gentoo.org>
  gentoo-sources-2.6.38-r7.ebuild:
  Stable for AMD64, wrt bug #394929

  22 Dec 2011; Michael Pagano <mpagano@gentoo.org>
  -gentoo-sources-2.6.32-r36.ebuild, -gentoo-sources-2.6.32-r37.ebuild,
  -gentoo-sources-2.6.32-r38.ebuild:
  Drop old

*gentoo-sources-3.1.5 (10 Dec 2011)
*gentoo-sources-3.0.13 (10 Dec 2011)
*gentoo-sources-2.6.32-r39 (10 Dec 2011)

  10 Dec 2011; Stratos Psomadakis <psomas@gentoo.org>
  +gentoo-sources-2.6.32-r39.ebuild, +gentoo-sources-3.0.13.ebuild,
  +gentoo-sources-3.1.5.ebuild:
  Version bump

*gentoo-sources-3.1.4 (30 Nov 2011)

  30 Nov 2011; Stratos Psomadakis <psomas@gentoo.org>
  +gentoo-sources-3.1.4.ebuild:
  Version bump (fixes USB regression in 3.1.3)

*gentoo-sources-3.1.3 (27 Nov 2011)
*gentoo-sources-3.0.11 (27 Nov 2011)
*gentoo-sources-2.6.32-r38 (27 Nov 2011)

  27 Nov 2011; Stratos Psomadakis <psomas@gentoo.org>
  +gentoo-sources-2.6.32-r38.ebuild, +gentoo-sources-3.0.11.ebuild,
  +gentoo-sources-3.1.3.ebuild:
  Version bump
