@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.911 2012/01/01 17:56:53 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.912 2012/01/02 22:44:43 mpagano Exp $
+
+  02 Jan 2012; Michael Pagano <mpagano@gentoo.org>
+  -gentoo-sources-3.1.0.ebuild, -gentoo-sources-3.1.0-r1.ebuild,
+  -gentoo-sources-3.1.1.ebuild, -gentoo-sources-3.1.2.ebuild,
+  -gentoo-sources-3.1.3.ebuild:
+  Drop old.
 
   01 Jan 2012; Raúl Porcel <armin76@gentoo.org>
   gentoo-sources-2.6.38-r7.ebuild:
